--- a/app/templates/modals_shared.html
+++ b/app/templates/modals_shared.html
@@ -317,7 +317,7 @@
                                         <td class="has-text-centered">
                                             <input type="checkbox" class="is-small"
                                                 id="${ignoreId}"
-                                                title="Ignorar esta DLC"
+                                                title="Ignorar notificações desta DLC"
                                                 onchange="toggleItemIgnore('${game.id}', 'dlc', '${d.app_id}', this.checked)">
                                         </td>
                                     </tr>
